log
Wed 24 Apr 2024 06:45:27 PM UTC: 
 tests:  0|6
total_score: 0/70
2f94628
Wed 24 Apr 2024 06:56:20 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
15f3655
Wed 24 Apr 2024 07:41:37 PM UTC: 
 hashmap.c | 38 ++++++++++++++++++++++++++++++++++++++
 1 file changed, 38 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:85:5: error: implicit declaration of function ‘insert’; did you mean ‘insertMap’? [-Werror=implicit-function-declaration]
   85 |     insert(map, oldArray->key, oldArray->data);
      |     ^~~~~~
      |     insertMap
hashmap.c:85:25: error: ‘*oldArray’ is a pointer; did you mean to use ‘->’?
   85 |     insert(map, oldArray->key, oldArray->data);
      |                         ^~
      |                         ->
hashmap.c:85:40: error: ‘*oldArray’ is a pointer; did you mean to use ‘->’?
   85 |     insert(map, oldArray->key, oldArray->data);
      |                                        ^~
      |                                        ->
hashmap.c:81:11: error: unused variable ‘newArray’ [-Werror=unused-variable]
   81 |   Pair ** newArray = (Pair**) malloc(nuevaCap* sizeof(Pair*));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
103daa0
Wed 24 Apr 2024 07:42:03 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cc9EuYhU.o: in function `enlarge_test':
test.c:(.text+0x11f0): undefined reference to `enlarge'
collect2: error: ld returned 1 exit status
Compilation failed
ec0e730
Wed 24 Apr 2024 07:42:24 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
2a3578e
Wed 24 Apr 2024 07:46:59 PM UTC: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
676dba0
Wed 24 Apr 2024 07:49:43 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:86:49: error: ‘Pair’ has no member named ‘data’
   86 |     insertMap(map, oldArray[i]->key, oldArray[i]->data);
      |                                                 ^~
hashmap.c:82:11: error: unused variable ‘newArray’ [-Werror=unused-variable]
   82 |   Pair ** newArray = (Pair**) malloc(nuevaCap* sizeof(Pair*));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7193d3e
Wed 24 Apr 2024 07:59:43 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:82:11: error: unused variable ‘newArray’ [-Werror=unused-variable]
   82 |   Pair ** newArray = (Pair**) malloc(nuevaCap* sizeof(Pair*));
      |           ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f1d1364
